--- a/index.html
+++ b/index.html
@@ -20,4 +20,6 @@ https://sumbledata-streamlit-data-explorer-streamlit-display-app-tupk2s.streamli
     referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
     <!-- End of Statcounter Code -->
 </head>
+<body>
+    </body>
 </html>
