--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
 <html>
 
 <head>
-<!-- Default Statcounter code for Sumble Streamlit
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2MMJM82JGQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2MMJM82JGQ');
+</script>
+   
+    
+    <!-- Default Statcounter code for Sumble Streamlit
 https://sumbledata-streamlit-data-explorer-streamlit-display-app-tupk2s.streamlit.app
 -->
 
